k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rng-gke-sql
  namespace: rng-widgets
spec:
  selector:
    matchLabels:
      app: rng-gke-sql-app
      tier: backend
  template:
    metadata:
      labels:
        app: rng-gke-sql-app
        tier: backend
    spec:
      serviceAccountName: ksa-cloud-sql
      containers:
      - name: rails
        image: us-east1-docker.pkg.dev/rails-ng-demo/rng-gke-cloud-sql-repo/gke-sql:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
      - name: cloud-sql-proxy
        # This uses the latest version of the Cloud SQL proxy
        # It is recommended to use a specific version for production environments.
        # See: https://github.com/GoogleCloudPlatform/cloudsql-proxy 
        image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:latest
        ports:
        - containerPort: 5432
          protocol: TCP
        args:
          # If connecting from a VPC-native GKE cluster, you can use the
          # following flag to have the proxy connect over private IP
          - "--private-ip"
          - "--structured-logs"

          # tcp should be set to the port the proxy should listen on
          # and should match the DB_PORT value set above.
          # Defaults: MySQL: 3306, Postgres: 5432, SQLServer: 1433
          - "--port=5432"
          - "rails-ng-demo:northamerica-northeast2:rails-ng-demo-db"
        securityContext:
          # The default Cloud SQL proxy image runs as the
          # "nonroot" user and group (uid: 65532) by default.
          runAsNonRoot: true
