k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: rng-widgets
spec:
  selector:
    matchLabels:
      app: rng-gke-sql-app
      tier: frontend
  template:
    metadata:
      labels:
        app: rng-gke-sql-app
        tier: frontend
    spec:
      containers:
      - name: nginx
        image: us-east1-docker.pkg.dev/rails-ng-demo/rng-gke-cloud-sql-repo/frontend:latest
        resources:
          requests:
            memory: "10Mi"
            cpu: "0.25m"
          limits:
            memory: "16Mi"
            cpu: "0.5m"
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 80
          protocol: TCP
