k8s/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: rng-widgets
  annotations:
    cloud.google.com/backend-config: '{"default": "redis-config"}'
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
---
